write tfplan as bytes